# integration-platform

./: .dockerignore  .gitignore  AUDIT-LOG-IMPLEMENTATION.md  BUILDING.md  CONNECTOR-UPDATE-WITH-EXTRA-ATTRIBUTES.md  CREATE-FRONTEND.sh  Cargo.toml  DEPLOYMENT.md  Dockerfile.control-plane  Dockerfile.data-plane  EVENT-DRIVEN-ARCHITECTURE.md  FIX-CONNECTOR-DEFINITIONS-QUERY.md  FLOW-DESIGNER-ENHANCEMENTS-COMPLETE.md  FRONTEND-IMPLEMENTATION.md  LOOP-CONTROL-DESIGN.md  Makefile  QUICK-REFERENCE.md  RBAC-QUICK-FIX.md  README.md  SCHEDULER-QUICK-START.md  TRANSFORMATION-GUIDE.md  UI-PALETTE-GUIDE.md  build-test.sh  build.sh  docker-compose.test.yml  docker-compose.yml  test-circuit-breaker.sh  test-connector-instances.sh  test-http-connector.sh  test-rate-limiting.sh  test-rbac.sh  test-ui-palette.sh  test.sh
.sqlx/: query-231c6847e2b91f09ed47d6ac65135510d994341dc6103645e56ac03ba99bc47e.json  query-418b5ef24b037a640f86b6d58d2455d39439fc3e92e8c29aa8f499850c2e3a10.json  query-46ba80abdd72bf99fcb772e7f29c39951ff4b765ace5e56badb8e5a78f3ec84e.json  query-4f87d6bcd23fea3c0fe8eedbd84b1c332c66faf562675fd6625b97c9d61f2cb4.json  query-558389342702ca025ff5574637b5442cbf3f62b63a48e044c0ce87b09db093e1.json  query-5c629749c65c014ae2e61169823774a6553b4f9528455b7a9e4eb90a18df684c.json  query-5e03e65f1fa900503eb6d0e56249cdbda1b98ef2423e7484c8ac33010925c50c.json  query-8ad13a03328c13ca44cf85f899b0f9dddcd7b0c60ae058cbdea19d03caddac97.json  query-9951c611f5d4cf2ab21bc3651eb0f5520c528ce1b724f477b98a35775cb078fa.json  query-a623799437f695a94f1731f5b2949f14848518af65dee467d7cdf2a63d2efb07.json  query-a6d816852d3e0871f7c53cc0dc3cfb9ba39ce792829de7c733fa16f21adabfbd.json  query-aea30a04137a6b94aeeb207f9719b0bedc42e7939d76150dc6911c8c19ffb0d2.json  query-b151d74e5c9043ea107d37bacaba51c671fb0ef428f6bec31115d597941249a2.json  query-d43d5367a61dba56707383af13508f027ba6d5265b1016c3b76eff232bb0981b.json  query-e204b4a09fb05bfd49578952d4922d54e38d67cc0202b3abbfe12b5114d9e1fd.json  query-e3184a7cb3fb08892019ee590410fd89b740f37d058c030392a42c7064d71241.json
building_aid/: CIRCUIT-BREAKER.md  CONNECTOR-INSTANCES.md  CONTROL-PLANE-FLOW-SYNC.md  DATABASE-FLOW-LOADING.md  EXAMPLES.md  FIX-CORS-ISSUE.md  FLOW-DESIGNER-REQUIREMENTS.md  FLOW-TEST-ENDPOINT.md  HOW-TO-USE-LOOP-EXECUTOR.md  HTTP-CONNECTOR-DESIGN.md  HTTP-CONNECTOR-GUIDE.md  HTTP-TO-DB-VARIABLE-PASSING.md  HTTP-TRIGGERS.md  METRICS.md  (+20 more)
crates/control-plane/: Cargo.toml
crates/control-plane/migrations/: 20240101000001_create_users.sql  20240101000002_create_api_definitions.sql  20240101000003_create_flow_definitions.sql  20240101000004_create_connector_definitions.sql  20240101000005_create_trigger_definitions.sql  20240101000006_create_client_credentials.sql  20240101000007_create_connector_instances.sql  20240101000008_create_user_invitations.sql  20240101000009_create_audit_logs.sql  20240101000010_flow_client_id.sql  20240101000011_create_projects.sql
crates/control-plane/src/: audit.rs  crypto.rs  db_migrations.rs  error.rs  keycloak.rs  main.rs  oidc.rs  rbac.rs  startup.rs  transformers.rs
crates/control-plane/src/handlers/: api.rs  audit.rs  auth.rs  connector.rs  connector_instance.rs  flow.rs  mod.rs  project.rs  rate_limit.rs  user.rs
crates/control-plane/src/services/: connector_sync.rs  credential_validation.rs  flow_sync.rs  mod.rs  rate_limit_listener.rs
crates/control-plane/src/state/: mod.rs
crates/data-plane/: Cargo.toml
crates/data-plane/src/: auth.rs  circuit_breaker.rs  connector_registry.rs  error.rs  executor.rs  handlers.rs  main.rs  metrics.rs  rate_limit.rs  retry.rs  scheduler.rs  startup.rs  state.rs
crates/data-plane/src/services/: config_listener.rs  connector_listener.rs  mod.rs
crates/integration-runtime/: Cargo.toml  GRAPH_EXECUTOR.md
crates/integration-runtime/src/: graph_executor.rs  lib.rs  loop_executor.rs  templates.rs
crates/integration-runtime/src/connectors/: http.rs  mod.rs  mssql.rs  mysql.rs  oracle.rs  postgres.rs
crates/integration-runtime/src/connectors/aws/: s3.rs
crates/integration-runtime/src/transformers/: json.rs
(+118 files in other folders)
