[package]
name = "control-plane"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "control-plane"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }

tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
redis = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace =true }
aes-gcm = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true}
