[package]
name = "data-plane"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "data-plane"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
integration-runtime = { path = "../integration-runtime" }

tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
redis = { workspace = true }
tower = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
