[package]
name = "integration-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
base64 = "0.21"
regex = "1.10"
oracle = "0.5"
futures = { workspace = true }
tiberius = { version = "0.12", default-features = false, features = ["tokio", "native-tls"] }
tokio-util = { version = "0.7", features = ["compat"] }
